# LipExample

./: Dockerfile  README.md  docker-compose.yml  ffff  pyproject.toml  requirements.txt  taskfile.yaml
.github/workflows/: code_quality_checks.yml
.taskfiles/code-quality/: taskfile.yaml
.taskfiles/streamlit/: taskfile.yaml
app/: app.py  main.py
app/core/: config.py  logger.py
app/models/: image.py
scripts/: example.py
