[tool.poetry]
name = "LipExample"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.6,<=3.7.16"
streamlit = ">=1.2.0"
tensorflow = ">=1.15.4,<2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

